fix(globals.css): Added in overflow: hidden to html and body to remove scroll bar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,10 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+html, body { 
+  height: 100%; 
+  overflow: hidden
+}
 
 @theme inline {
   --color-background: var(--background);
